--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -1,6 +1,6 @@
 .md-steppers-horizontal .md-stepper-indicator {
 	flex-basis: 20%;
-    flex-grow: 0;
+	flex-grow: 0;
 }
 
 .headerProgress {
@@ -23,288 +23,287 @@
 .mainArea {
 	height: calc(100vh - 300px);
 	.right-stat {
-	    order: 2;
-	    width: 240px;
-	    overflow: hidden;
-	    position:relative;
-	    min-height: calc(100vh - 100px);
-	    .contact-brokerage
-	    {
-	    	margin-top: 10px;
-	    	input {
+		order: 2;
+		width: 240px;
+		overflow: hidden;
+		position:relative;
+		min-height: calc(100vh - 100px);
+		.contact-brokerage
+		{
+			margin-top: 10px;
+			input {
 				height: 45px;
-			    padding-left: 10px;
-			    font-size: 14px;
-			    border-radius: 3px;
-			    width: 100%;
-			    margin: 10px;
-			    border: none;	
-			    margin-left: 0;
+				padding-left: 10px;
+				font-size: 14px;
+				border-radius: 3px;
+				width: 100%;
+				margin: 10px;
+				border: none;	
+				margin-left: 0;
 			}
-	    }
-	}
-}
-footer {
-  background-color: #f2f8f8;
-  height:90px;
-  width:100%;
-}
-.md-raised.md-success {
-	color: #ffffff;
-	font-family: Lato;
-	margin-left: 0px;
-	margin-right: 0px;
-	border-radius: 1px;
-	background: #3bada5;
-}
-.md-raised.md-blue {
-	color: #ffffff;
-	font-family: Lato;
-	margin-left: 10px;
-	margin-right: 0px;
-	border-radius: 1px;
-	background: #3498db;
-}
-.md-raised.md-back {
-	color: white;
-	margin-right:0px;
-	border-radius: 1px;
-	font-family: Lato;
-	background: #4f6379;
-}
-.md-raised.md-edit-form {
-	color: #9da9b5;
-	margin-right: 0px;
-	border-radius: 1px;
-	font-family: Lato;
-	margin-left: 0px;
-	background: #ecf0f1;
-	padding-left: 20px;
-    padding-right: 20px;
-	&:hover {
-		color: #9da9b5;
-		background: #ecf0f1;
-	}
-}
-md-step-body {
-	max-height: calc(100vh - 290px);
-}
-.md-raised.md-back:not([disabled]):hover {
-	color: white;
-	background: #4f6379;
-}
-.md-raised.md-success:not([disabled]):hover {
-    background-color: #3bada5;
-}
-.md-raised.md-blue:not([disabled]):hover {
-    background-color: #3498db;
-}
-
-.md-stepper-indicator-wrapper
-{
-	flex-flow: column-reverse;
-	width: 100%;
-	background: none;
-}
-
-.md-steppers-horizontal .md-stepper-indicator:after {
-    width: 100%;
-    height: 3px;
-    margin-top: -1px;
-    position: absolute;
-    top: 46px;
-    left: 0;
-    z-index: 1;
-    background-color: #e8e8e8;
-    content: " ";
-}
-.md-steppers-horizontal .md-stepper-indicator.md-completed:after, .md-steppers-horizontal .md-stepper-indicator.md-active:after {
-	background-color: #f39c11;
-}
-
-.md-stepper-indicator.md-active .md-stepper-title, .md-stepper-indicator.md-completed .md-stepper-title {
-    color: #4f6379;
-}
-.md-stepper-title {
-    color: #eccbcb;
-    font-weight: normal;
-}
-.md-stepper-indicator .md-stepper-number, .md-stepper-indicator.md-completed .md-stepper-number {
-	background-color: #fff;
-	width: 40px;
-    height: 40px;
-    border-radius: 40px;
-    line-height: 36px;
-    color: #a2a9b1;
-    border: solid 2px #e4e9ee;
-}
-.md-stepper-indicator.md-active .md-stepper-number, .md-stepper-indicator.md-completed .md-stepper-number {
-	background-color: #f39c11;
-	color: #fff;
-	border: none;
-	line-height: 40px;
-
-}
-.rightSide {
-	.message-container {
-		padding: 10px;	
-		.message-requests {
-			border-radius: 5px;
-		    background-color: #fff;
-		    color: #4f6379;
-    		padding: 5px;
-			width: 140px;
-			margin-bottom: 10px;
-		    .datetime {
-		    	color: #778ba2;
-		    	font-size: 12px;
-    			margin-top: 10px;
-		    }
-		    &.left {
-		    }
-		    &.right {
-		    	margin-left: 40px;
-		    } 
 		}
 	}
-}
-.rightSide md-event-calendar {
-	margin: 0px;
-}
-.md-stepper-number.md-active {
-	background-color: #f39c11;
-}
-.md-stepper-number {
-	color: #e2eaec;
-	background-color: #ffffff;
-	border: 2px solid #e2eaec;
-}
-md-stepper {
-	width: 100%;
-	flex: 1;
-}
-.md-steppers-header {
-    box-shadow: none;
-}
-.md-steppers:not(.md-steppers-linear) .md-stepper-indicator.md-editable.md-completed:hover, .md-steppers:not(.md-steppers-linear) .md-stepper-indicator.md-editable.md-completed:hover .md-stepper-indicator-wrapper, .md-steppers:not(.md-steppers-linear) .md-stepper-indicator:not(.md-active):not(.md-completed):hover, .md-steppers:not(.md-steppers-linear) .md-stepper-indicator:not(.md-active):not(.md-completed):hover .md-stepper-indicator-wrapper {
-    background-color: transparent;
-    opacity: 0.9;
-}
-md-event-calendar {
-	margin:30px;	
-}
+	footer {
+		background-color: #f2f8f8;
+		height:90px;
+		width:100%;
+	}
+	.md-raised.md-success {
+		color: #ffffff;
+		font-family: Lato;
+		margin-left: 0px;
+		margin-right: 0px;
+		border-radius: 1px;
+		background: #3bada5;
+	}
+	.md-raised.md-blue {
+		color: #ffffff;
+		font-family: Lato;
+		margin-left: 10px;
+		margin-right: 0px;
+		border-radius: 1px;
+		background: #3498db;
+	}
+	.md-raised.md-back {
+		color: white;
+		margin-right:0px;
+		border-radius: 1px;
+		font-family: Lato;
+		background: #4f6379;
+	}
+	.md-raised.md-edit-form {
+		color: #9da9b5;
+		margin-right: 0px;
+		border-radius: 1px;
+		font-family: Lato;
+		margin-left: 0px;
+		background: #ecf0f1;
+		padding-left: 20px;
+		padding-right: 20px;
+		&:hover {
+			color: #9da9b5;
+			background: #ecf0f1;
+		}
+	}
+	md-step-body {
+		max-height: calc(100vh - 290px);
+	}
+	.md-raised.md-back:not([disabled]):hover {
+		color: white;
+		background: #4f6379;
+	}
+	.md-raised.md-success:not([disabled]):hover {
+		background-color: #3bada5;
+	}
+	.md-raised.md-blue:not([disabled]):hover {
+		background-color: #3498db;
+	}
 
-.inputdemoErrors .inputErrorsApp {
-  min-height: 48px; }
+	.md-stepper-indicator-wrapper
+	{
+		flex-flow: column-reverse;
+		width: 100%;
+		background: none;
+	}
 
-.inputdemoErrors md-input-container > p {
-  font-size: 0.8em;
-  text-align: left;
-  width: 100%; }
+	.md-steppers-horizontal .md-stepper-indicator:after {
+		width: 100%;
+		height: 3px;
+		margin-top: -1px;
+		position: absolute;
+		top: 46px;
+		left: 0;
+		z-index: 1;
+		background-color: #e8e8e8;
+		content: " ";
+	}
+	.md-steppers-horizontal .md-stepper-indicator.md-completed:after, .md-steppers-horizontal .md-stepper-indicator.md-active:after {
+		background-color: #f39c11;
+	}
 
-.col {
-	margin: 5px 20px 10px 20px;
-}
+	.md-stepper-indicator.md-active .md-stepper-title, .md-stepper-indicator.md-completed .md-stepper-title {
+		color: #4f6379;
+	}
+	.md-stepper-title {
+		color: #eccbcb;
+		font-weight: normal;
+	}
+	.md-stepper-indicator .md-stepper-number, .md-stepper-indicator.md-completed .md-stepper-number {
+		background-color: #fff;
+		width: 40px;
+		height: 40px;
+		border-radius: 40px;
+		line-height: 36px;
+		color: #a2a9b1;
+		border: solid 2px #e4e9ee;
+	}
+	.md-stepper-indicator.md-active .md-stepper-number, .md-stepper-indicator.md-completed .md-stepper-number {
+		background-color: #f39c11;
+		color: #fff;
+		border: none;
+		line-height: 40px;
 
-.footerBtns {
-	margin: 15px;
-}
+	}
+	.rightSide {
+		.message-container {
+			padding: 10px;	
+			.message-requests {
+				border-radius: 5px;
+				background-color: #fff;
+				color: #4f6379;
+				padding: 5px;
+				width: 140px;
+				margin-bottom: 10px;
+				.datetime {
+					color: #778ba2;
+					font-size: 12px;
+					margin-top: 10px;
+				}
+				&.left {
+				}
+				&.right {
+					margin-left: 40px;
+				} 
+			}
+		}
+	}
+	.rightSide md-event-calendar {
+		margin: 0px;
+	}
+	.md-stepper-number.md-active {
+		background-color: #f39c11;
+	}
+	.md-stepper-number {
+		color: #e2eaec;
+		background-color: #ffffff;
+		border: 2px solid #e2eaec;
+	}
+	md-stepper {
+		width: 100%;
+		flex: 1;
+	}
+	.md-steppers-header {
+		box-shadow: none;
+	}
+	.md-steppers:not(.md-steppers-linear) .md-stepper-indicator.md-editable.md-completed:hover, .md-steppers:not(.md-steppers-linear) .md-stepper-indicator.md-editable.md-completed:hover .md-stepper-indicator-wrapper, .md-steppers:not(.md-steppers-linear) .md-stepper-indicator:not(.md-active):not(.md-completed):hover, .md-steppers:not(.md-steppers-linear) .md-stepper-indicator:not(.md-active):not(.md-completed):hover .md-stepper-indicator-wrapper {
+		background-color: transparent;
+		opacity: 0.9;
+	}
+	md-event-calendar {
+		margin:30px;	
+	}
 
-md-input-container.md-block {
-	margin-top: 0px;
-}
+	.inputdemoErrors .inputErrorsApp {
+		min-height: 48px; }
 
-.detailsForm {
-	margin-top:45px;
-}
+		.inputdemoErrors md-input-container > p {
+			font-size: 0.8em;
+			text-align: left;
+			width: 100%; }
 
-.partnersHeader {
-	font-family: Lato;
-	font-size: 16px;
-	font-weight: 700;
-	color: #4f6379;
-	text-align: center;
-	margin-top: 40px;
-	width: 100%;
-}
+			.col {
+				margin: 5px 20px 10px 20px;
+			}
 
-md-event-calendar .md-event-calendar-cell-event.book-appointment {
-	background-color: #3aafa5;
-	color: white;
-}
+			.footerBtns {
+				margin: 15px;
+			}
 
-.partnerBox {
-	width: 200px;
-	height: 100px;
-	object-fit: contain;
-	border-radius: 5px;
-	background-color: #ffffff;
-	background-color: var(--white);
-	border: solid 1px #e7ecf1;
-	border: solid 1px var(--pale-grey);
-}
+			md-input-container.md-block {
+				margin-top: 0px;
+			}
 
-.partnerSelected {
-	border-radius: 5px;
-	border: solid 1px #3aafa5;
-	border: solid 1px var(--greeny-blue);
-}
+			.detailsForm {
+				margin-top:45px;
+			}
 
-.partnerLogo {
-  width: 200px;
-  height: 100px;
-  object-fit: contain;
-  border-radius: 5px;
-  background-color: #ffffff;
-  border: solid 1px #e7ecf1;
-  margin: 20px;
-  position: relative;
-  -webkit-transition : border 400ms ease-out;
-  -moz-transition : border 400ms ease-out;
-  -o-transition : border 400ms ease-out;
-  transition : border 400ms ease-out;
+			.partnersHeader {
+				font-family: Lato;
+				font-size: 16px;
+				font-weight: 700;
+				color: #4f6379;
+				text-align: center;
+				margin-top: 40px;
+				width: 100%;
+			}
 
-  img {
-  	height: 40px;
-  	margin-top: 25px;
-  }
-  .premiereIcon {
-	position: absolute;
-    height: 20px;
-    top: -25px;
-    left: 15px;
-  }
-}
-.partnerLogo:focus {
-  	outline: none;
-	border: 0;
-	border: solid 1px #e7ecf1;
-	 &.deactivated {
-   	border: none;
-   }
-  	
- }
+			md-event-calendar .md-event-calendar-cell-event.book-appointment {
+				background-color: #3aafa5;
+				color: white;
+			}
 
- .partnerLogo.selected {
- 	outline: none;
-	border: 0;
-  	border: solid 2px #3aafa5;
- }
+			.partnerBox {
+				width: 200px;
+				height: 100px;
+				object-fit: contain;
+				border-radius: 5px;
+				background-color: #ffffff;
+				background-color: var(--white);
+				border: solid 1px #e7ecf1;
+				border: solid 1px var(--pale-grey);
+			}
 
- .partnerLogo.deactivated, .partnerLogo.selected.deactived {
- 	outline: none;
-	border: solid 1px #e7ecf1;
-	background: #f2f2f2;
- }
+			.partnerSelected {
+				border-radius: 5px;
+				border: solid 1px #3aafa5;
+				border: solid 1px var(--greeny-blue);
+			}
 
-.partnerLogo:hover {
-   border : solid 2px #3aafa5; 
-   &.deactivated {
-   	border: none;
-   }
-}
+			.partnerLogo {
+				width: 200px;
+				height: 100px;
+				object-fit: contain;
+				border-radius: 5px;
+				background-color: #ffffff;
+				border: solid 1px #e7ecf1;
+				margin: 20px;
+				position: relative;
+				-webkit-transition : border 400ms ease-out;
+				-moz-transition : border 400ms ease-out;
+				-o-transition : border 400ms ease-out;
+				transition : border 400ms ease-out;
 
-#stepper-demo.rightSideBar {
+				img {
+					height: 40px;
+					margin-top: 25px;
+				}
+				.premiereIcon {
+					position: absolute;
+					height: 20px;
+					top: -25px;
+					left: 15px;
+				}
+			}
+			.partnerLogo:focus {
+				outline: none;
+				border: 0;
+				border: solid 1px #e7ecf1;
+				&.deactivated {
+					border: none;
+				}
+
+			}
+
+			.partnerLogo.selected {
+				outline: none;
+				border: 0;
+				border: solid 2px #3aafa5;
+			}
+
+			.partnerLogo.deactivated, .partnerLogo.selected.deactived {
+				outline: none;
+				border: solid 1px #e7ecf1;
+				background: #f2f2f2;
+			}
+
+			.partnerLogo:hover {
+				border : solid 2px #3aafa5; 
+				&.deactivated {
+					border: none;
+				}
+			}
+
+			#stepper-demo.rightSideBar {
 	/*
 	min-width: 900px;
 	right: 0px;
@@ -320,57 +319,56 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
 }
 
 .rightSide {
-    width: 250px;
-    max-width: 250px;
-    height: calc(100vh - 120px);
-   	overflow: hidden;
+	width: 250px;
+	max-width: 250px;
+	height: calc(100vh - 120px);
+	overflow: hidden;
 }
 .contactedUsersTitle {
-  line-height: 19px;
-  font-family: Lato;
-  font-size: 16px;
-  font-weight: 500;
-  font-style: normal;
-  font-stretch: normal;
-  color: #4f6379;
-  margin-top: 24px;
-  margin-left: 15px;
-  margin-right: 15px;
+	line-height: 19px;
+	font-family: Lato;
+	font-size: 16px;
+	font-weight: 500;
+	font-style: normal;
+	font-stretch: normal;
+	color: #4f6379;
+	margin-top: 24px;
+	margin-left: 15px;
+	margin-right: 15px;
 }
 
 .searchBar {
-    margin-top: 21px;
-    height: 35px;
-    width: 220px;
+	margin-top: 21px;
+	height: 35px;
+	width: 220px;
 	margin-left: 14px;
 	margin-right: 15px;
 }
 
 .appointment {
 	outline: none;
-    display: flex;
-    padding: 15px;
-    margin-top: 20px; 
-    width: 100%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    cursor: pointer;
-    .detail {
-        display: flex;
-        flex-flow: column;
-        margin-left: 10px;
-    }
-    .pending-btn {
-        padding: 5px 0;
-        text-transform: uppercase;
-        border: 1px solid #57c3ea;
-        color: #57c3ea;
-        border-radius: 3px;
-        font-size: 12px;
-        cursor: pointer;
-        text-align: center;
-        min-height: 25px;
-    }
+	display: flex;
+	padding: 15px;
+	margin-top: 20px; 
+	padding-top: 20px;
+	padding-bottom: 20px;
+	cursor: pointer;
+	.detail {
+		display: flex;
+		flex-flow: column;
+		margin-left: 10px;
+	}
+	.pending-btn {
+		padding: 5px 0;
+		text-transform: uppercase;
+		border: 1px solid #57c3ea;
+		color: #57c3ea;
+		border-radius: 3px;
+		font-size: 12px;
+		cursor: pointer;
+		text-align: center;
+		min-height: 25px;
+	}
 }
 .appointment.active {
 	background-image: linear-gradient(to bottom, #4a86a9, #15736b);
@@ -383,7 +381,7 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
 .validation-report-count
 {
 	display: flex;
-    margin: 10px 30px;
+	margin: 10px 30px;
 	color: #4f6379;
 	.stat {
 		font-size: 60px;
@@ -412,16 +410,16 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
 	line-height: 22px;
 	font-weight: 600;
 	margin: 15px;
-    padding: 10px;
-    margin-left: 25px;
-    clear: both;
-    overflow: hidden;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    border-radius: 5px;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
+	padding: 10px;
+	margin-left: 25px;
+	clear: both;
+	overflow: hidden;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	border-radius: 5px;
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
 
 	.title {
 		font-size: 16px;
@@ -479,36 +477,36 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
 		}
 	}
 	.document-container {
-		min-height: 300px;
-	    max-height: 100px;
-	    overflow: auto;
-	    padding-right: 20px;
+		min-height: 250px;
+		max-height: 100px;
+		overflow: auto;
+		padding-right: 20px;
 	}
 	.documentTile {
 		border: solid 1px #e7ecf1;
 		overflow: hidden;
-	    padding: 10px;
-	    color: #4f6379;
-	    font-size: 14px;
-	    margin-top: 15px;
-	    outline:none;
-	    position: relative;
-	    cursor: pointer;
-	    border-radius: 3px;
-	    &.selected {
-	    	background-color: #f2f2f2;
-	    	img.selected {
-	    		display: block;
-	    	}
-	    }
-	    img.selected {
+		padding: 10px;
+		color: #4f6379;
+		font-size: 14px;
+		margin-top: 15px;
+		outline:none;
+		position: relative;
+		cursor: pointer;
+		border-radius: 3px;
+		&.selected {
+			background-color: #f2f2f2;
+			img.selected {
+				display: block;
+			}
+		}
+		img.selected {
 			height: 15px;
-		    width: 15px;
-		    position: absolute;
-		    top: -6px;
-		    right: -5px;
-		    display: none;
-	    }
+			width: 15px;
+			position: absolute;
+			top: -6px;
+			right: -5px;
+			display: none;
+		}
 		img {
 			height: 30px;
 			opacity: 0.4;
@@ -526,10 +524,10 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
 	.appointmentTile {
 		border: solid 1px #e7ecf1;
 		overflow: hidden;
-	    padding: 10px;
-	    color: #4f6379;
-	    font-size: 14px;
-	    margin-top: 15px;
+		padding: 10px;
+		color: #4f6379;
+		font-size: 14px;
+		margin-top: 15px;
 		.actnItem {
 			outline: none;
 			margin: 20px;
@@ -553,31 +551,31 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
 
 .ticked {
 	background: url(../../../../assets/images/ticked.png) no-repeat;
-    outline: none;
-    height: 34px;
-    width:34px;
-    padding: 5px;
-    float: left;
-    margin-right: 5px;
-    background-size: 34px;
-    &.grey {
-    	background: url(../../../../assets/images/tickedgrey.png) no-repeat;
-	    background-size: 34px;
-    }
+	outline: none;
+	height: 34px;
+	width:34px;
+	padding: 5px;
+	float: left;
+	margin-right: 5px;
+	background-size: 34px;
+	&.grey {
+		background: url(../../../../assets/images/tickedgrey.png) no-repeat;
+		background-size: 34px;
+	}
 }
 
 .unticked {
 	background: url(../../../../assets/images/unticked.png) no-repeat;	
-    outline: none;
-    height: 34px;
-    width:34px;
-    padding: 5px;
-    float: left;
-    background-size: 34px;
-    &.grey {
+	outline: none;
+	height: 34px;
+	width:34px;
+	padding: 5px;
+	float: left;
+	background-size: 34px;
+	&.grey {
 		background: url(../../../../assets/images/untickedgrey.png) no-repeat;
- 	    background-size: 34px;
-    }
+		background-size: 34px;
+	}
 }
 
 
@@ -590,7 +588,7 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
 		color: #4f6379;
 	}
 	hr {
-	    border-top: solid 1px #e7ecf1;
+		border-top: solid 1px #e7ecf1;
 	}
 	.addedEmail {
 		color: #3aafa5;
@@ -645,4 +643,20 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
 		.timings {
 		}
 	}
+}
+.chart-container {
+	display: flex;
+	flex: 1;
+	justify-content: space-around;
+	.chart {
+		.broker-profile-chart, .broker-kyc-chart, .broker-document-chart, .broker-validation-chart {
+			width: 120px;
+		} 
+		.rbc-center-text-line0
+		{
+			fill: #4f6379;
+    		font-size: 10px;
+		}
+	}
+}
 }
