Forgot Password merges

--- a/src/app/components/access/forgot-password/forgot-password.html
+++ b/src/app/components/access/forgot-password/forgot-password.html
@@ -1,16 +1,23 @@
 <form  name="forgetPasswordForm"  class="forgot-password-container" ng-submit="vm.resetPassword()">
-	<div style="font-size: 18px; width: 434px; line-height: 32px; text-align: center; margin-top: 10px;">
-		One time verification link sent to your email id.
+	<div ng-show="!vm.reset" style="text-align: center;">
+		<div style="font-size: 18px; line-height: 32px; text-align: center; margin-top: 10px;">
+			One time verification link sent to your email id.
+		</div>
+		<input type="email" ng-model="username" placeholder="Email Address" required>
+		<p class="error" ng-if="forgetPasswordForm.$valid && vm.invalidCredentials">Invalid Username.</p>
+		<div ng-if="forgetPasswordForm.username.$touched">
+			<div ng-messages="forgetPasswordForm.username.$error">
+				<p class="error" ng-message="required">This field cannot be empty.</p>
+				<p class="error" ng-message="email">Should be a valid email address.</p>
+			</div>		
+		</div>
+		<input type="submit" class="button" value="Reset Password">
+		<div style="margin-top: 30px; margin-bottom: 45px;">
+			Already have an account? <a style="color: #7b868a;cursor: pointer;" ui-sref="access.signin">Click here</a>		
+		</div>	
 	</div>
-	<input type="email" ng-model="username" placeholder="Email Address" required>
-	<div ng-if="forgetPasswordForm.username.$touched">
-		<div ng-messages="forgetPasswordForm.username.$error">
-			<p class="error" ng-message="required">This field cannot be empty.</p>
-			<p class="error" ng-message="email">Should be a valid email address.</p>
-		</div>		
+	<div ng-show="vm.reset" style="margin-top: 30px;margin-bottom: 45px;width: 434px;line-height: 25px;text-align: center;">
+		Password has been reset successfully. Please check your mail and <a style="color: #7b868a;cursor: pointer;" ui-sref="access.signin">Login</a> with new password.	
 	</div>
-	<input type="submit" class="button" value="Reset Password">
-	<div style="margin-top: 30px; margin-bottom: 45px;">
-		Already have an account? <a style="color: #7b868a;cursor: pointer;" ui-sref="access.signin">Click here</a>		
-	</div>
+	
 </form>
