--- a/src/app/components/access/change-password/change-password.html
+++ b/src/app/components/access/change-password/change-password.html
@@ -1,14 +1,25 @@
-<form name="changePassword">
-	<div class=".cpinput">
-		<label for="current">Current Password</label>
-		<input name="current" placeholder="Current Password" type="password">
+<form name="setPasswordForm" class="signin-container" ng-submit="vm.changePassword()">
+	<div style="font-size: 24px; line-height: 42px; margin-top: 50px;"> Kindly set new password to proceed.</div>
+	<div class="password">
+		<input name="password" ng-model="password" type="password" placeholder="New Password (min 8 char)" required> 
 	</div>
-	<div class=".cpinput">
-		<label for="new">New Password</label>
-		<input name="new" placeholder="New Password (min 8 char)" type="password">
+	<div ng-if="setPasswordForm.password.$touched">
+		<div ng-messages="setPasswordForm.password.$error">
+			<p class="error" ng-message="required" ng-if="setPasswordForm.username">Password cannot be empty.</p>
+		</div>		
 	</div>
-	<div class=".cpinput">
-		<label for="confirm">Confirm Password</label>
-		<input name="confirm" placeholder="Confirm Password" type="password">
+	<p class="error" ng-if="setPasswordForm.$valid && vm.invalidPassword">Password should be miminum 8 characters</p>
+	<div class="password">
+		<input name="confirm-password" ng-model="confirmpassword" type="password" placeholder="Confirm Password" required> 
+	</div>
+	<div ng-if="setPasswordForm.password.$touched">
+		<div ng-messages="setPasswordForm.password.$error">
+			<p class="error" ng-message="required" ng-if="setPasswordForm.username">Password cannot be empty.</p>
+		</div>		
+	</div>
+	<p class="error" ng-if="setPasswordForm.$valid && vm.invalidCredentials">Passwords didn't match</p>
+	<input type="submit" class="button" value="Set Password">
+	<div style="margin-top: 25px; margin-bottom: 80px;">
+		Don't have an account? <a style="color: #7b868a;cursor: pointer;" ui-sref="access.signup">Click here.</a>
 	</div>
 </form>
