--- a/src/app/components/main/profile-form/profileform.html
+++ b/src/app/components/main/profile-form/profileform.html
@@ -1,10 +1,17 @@
 <form name="profileForm">
 	<div ng-repeat="field in vm.userFields">
-		<div class="input" ng-if="field.key != 'userPhone' || vm.isBroker">
+		<div class="input" ng-if="field.key != 'userPhone'">
 				<label for="kyc-{{field.key}}">
 					{{field.description}} *
 				</label>
 				<input ng-class="{error:field.error}" name="kyc-{{field.key}}" type="text" ng-model="field.value" required ng-disabled="field.disabled || vm.isBroker">
+				<div ng-if="field.error" class="error">{{field.error}}</div>
+		</div>
+		<div class="input" ng-if="field.key == 'userPhone' && vm.isBroker">
+				<label for="kyc-{{field.key}}">
+					{{field.description}} *
+				</label>
+				<input ng-class="{error:field.error}" name="kyc-{{field.key}}" type="text" ng-model="field.displayValue" required ng-disabled="field.disabled || vm.isBroker">
 				<div ng-if="field.error" class="error">{{field.error}}</div>
 		</div>
 		<div ng-if="field.key == 'userPhone' && !vm.isBroker" class="phone-input">
