Document Zoom In/ Zoom out

--- a/src/app/components/main/dashboard/dashboard.scss
+++ b/src/app/components/main/dashboard/dashboard.scss
@@ -278,6 +278,8 @@
                     display: flex;
                     background-color: #fff;
                     border-radius: 5px;
+                    padding: 15px 5px;
+                    margin-bottom: 15px;
                     .detail {
                         display: flex;
                         flex-flow: column;
