--- a/src/app/components/main/calendar/dialog.html
+++ b/src/app/components/main/calendar/dialog.html
@@ -29,6 +29,7 @@
 
 	<div layout="row" flex align-items="center" align-content="flex-end" style="width: 100%; justify-content: center; margin-top: 10px;">
 	  <div><md-button class="md-raised md-success" ng-click="updateAppointment('CONFIRM')" ng-if="slot.ifConfirmButton">Confirm</md-button></div>
+    <div><md-button class="md-raised md-success" ng-click="" ng-if="slot.ifJoinVideoButton">Join Confernece</md-button></div>
 	  <div><md-button class="md-raised md-blue" ng-click="updateAppointment('RESCHEDULE')" ng-if="slot.ifRescheduleButton">Reschedule</md-button></div>
 	</div>
     </div>
