--- a/src/app/components/main/mini-calendar/miniCalendar.scss
+++ b/src/app/components/main/mini-calendar/miniCalendar.scss
@@ -66,7 +66,10 @@
         border: 1px #f39c12 solid;
 	    border-radius: 30px;
 	    background-color: rgba(0,0,0,0.1);
-	}
+		height: 28px;
+	    width: 28px;
+	    margin-top: 1px;
+    }
 	md-event-calendar md-event-calendar-month .md-event-calendar-month-row .md-event-calendar-month-cell .md-event-calendar-month-cell-content.md-has-events .md-event-calendar-cell-event-show-more-link {
 		position: absolute;
 	    top: -3px;
