--- a/src/app/components/main/blockchain/blockchain.scss
+++ b/src/app/components/main/blockchain/blockchain.scss
@@ -37,10 +37,10 @@
 			display: inline-block;
 			position: relative;
 			&::after{
-				content: "...";
+				content: ".....";
 			    position: absolute;
 			    top: 20px;
-			    right: -12px;
+			    right: -18px;
 			    opacity: 0.4;
 			}
 			.info {
@@ -66,22 +66,83 @@
 				    border-right: 7px solid transparent;
 				    border-top: 7px solid #f5f5f5;
 				    position: absolute;
+				    left: calc(50% - 7px);
 				}
 			}
-			&:hover .info{
-				display: block;
-			};
 			.block {
 				height: 60px;
-				margin-left: 12px;
+				margin-left: 20px;
 				width: 60px;
-				border: 1px solid #dae1e8;
-				background-color: #468fa8;
 				display: flex;
 				justify-content: center;
 				align-items: center;
 				cursor: pointer;
 				color: white;
+				position: relative;
+				&:hover {
+					.info {
+						display: block;
+					}
+					.block-top, .block-left, .block-right, .block-number {
+						transition: all 0.75s;
+					}
+					.block-top {
+						transform: rotate(90deg) translateX(-5px);
+					}
+					.block-left {
+						transform: rotate(-30deg) translateX(-5px);
+					}
+					.block-right {
+						transform: rotate(210deg) translateX(-5px);
+					}
+					.block-number {
+						transform: translateY(-5px);
+					}
+				}
+				.block-top, .block-left, .block-right {
+				    width: 0;
+				    height: 0;
+				    border: 12px solid transparent;
+				    border-bottom: 20px solid #CAEAFF;
+				    position: absolute;
+					&:after {
+						content: '';
+					    position: absolute;
+					    left: -12px;
+					    top: 20px;
+					    width: 0;
+					    height: 0;
+					    border: 12px solid transparent;
+					    border-top: 20px solid #CAEAFF;
+					}
+				} 
+				.block-top {
+				    transform: rotate(90deg);
+				    top: 6px;
+				    left: 35px;
+				}
+				.block-right {
+				    transform: rotate(210deg);
+				    top: 39px;
+				    left: 22px;
+				}
+				.block-left {
+				    transform: rotate(-30deg);
+				    left: 0;
+				    top: 11px;
+				}
+				.block-number {
+					color: white;
+				    z-index: 1;
+				    height: 16px;
+				    width: 16px;
+				    font-size: 10px;
+				    line-height: 16px;
+				    text-align: center;
+				    position: absolute;
+				    top: 13px;
+				    left: 23px;
+				}
 			}
 		}
 	}
