Block chain colors

--- a/src/app/components/main/blockchain/blockchain.scss
+++ b/src/app/components/main/blockchain/blockchain.scss
@@ -111,33 +111,33 @@
 				
 				&.color-1 {
 					.block-top, .block-left, .block-right {
-						border-bottom-color: #ceb8b5;
+						border-bottom-color: #40a3a8;
 						&:after {
-							border-top-color: #ceb8b5;
+							border-top-color: #40a3a8;
 						}
 					}	
 				}
 				&.color-3 {
 					.block-top, .block-left, .block-right {
-						border-bottom-color: #FCE6C1;
+						border-bottom-color: #f1c40f;
 						&:after {
-							border-top-color: #FCE6C1;
+							border-top-color: #f1c40f;
 						}
 					}	
 				}
 				&.color-2 {
 					.block-top, .block-left, .block-right {
-						border-bottom-color: #FFD0CA;
+						border-bottom-color: #297fb8;
 						&:after {
-							border-top-color: #FFD0CA;
+							border-top-color: #297fb8;
 						}
 					}	
 				}
 				&.color-4 {
 					.block-top, .block-left, .block-right {
-						border-bottom-color: #D4E8CF;
+						border-bottom-color: #e84c3d;
 						&:after {
-							border-top-color: #D4E8CF;
+							border-top-color: #e84c3d;
 						}
 					}	
 				}
