Video conference URL

--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -158,7 +158,7 @@
                             <div class="actnItem" ng-click="vm.updateMeetingStatus('RESCHEDULE')">RESCHEDULE</div>
                         </span>
                         <span ng-show="slot.status==='CONFIRM'">
-                            <div class="actnItem" ng-click="vm.showVideoDialog()" style="line-height:22px;">JOIN VIDEO<br/>CONFERENCE</div>
+                            <div class="actnItem" ng-click="vm.showVideoDialog(slot)" style="line-height:22px;">JOIN VIDEO<br/>CONFERENCE</div>
                         </span>
                     </div>
                 </div>
