--- a/src/app/components/access/change-password/change-password.html
+++ b/src/app/components/access/change-password/change-password.html
@@ -1,5 +1,14 @@
 <form name="setPasswordForm" class="signin-container" ng-submit="vm.changePassword()">
-	<div style="font-size: 24px; line-height: 42px; margin-top: 50px;"> Kindly set new password to proceed.</div>
+	<div style="font-size: 24px; line-height: 32px; margin-top: 50px;text-align:center;"> 
+		One time verification link sent to your email id. <br>
+		Kindly set new password to proceed.
+	</div>
+	<div class="password">
+		<input name="otp" ng-model="otp" type="text" placeholder="OTP" required> 
+	</div>
+	<div style="margin-top: 25px;">
+		Not recieved mail yet? <a style="color: #7b868a;cursor: pointer;" ui-sref="access.forgot-password">Send Again.</a>
+	</div>
 	<div class="password">
 		<input name="password" ng-model="password" type="password" placeholder="New Password (min 8 char)" required> 
 	</div>
