Set password screen changes

--- a/src/app/components/access/change-password/change-password.html
+++ b/src/app/components/access/change-password/change-password.html
@@ -1,13 +1,13 @@
 <form name="setPasswordForm" class="signin-container" ng-submit="vm.changePassword()">
 	<div style="font-size: 24px; line-height: 32px; margin-top: 50px;text-align:center;"> 
-		One time verification link sent to your email id. <br>
+		OTP sent to your hand phone number. <br>
 		Kindly set new password to proceed.
 	</div>
 	<div class="password">
 		<input name="otp" ng-model="otp" type="text" placeholder="OTP" required> 
 	</div>
 	<div style="margin-top: 25px;">
-		Not recieved mail yet? <a style="color: #7b868a;cursor: pointer;" ui-sref="access.forgot-password">Send Again.</a>
+		Not recieved OTP? <a style="color: #7b868a;cursor: pointer;text-decoration: underline;">Send Again.</a>
 	</div>
 	<div class="password">
 		<input name="password" ng-model="password" type="password" placeholder="New Password (min 8 char)" required> 
@@ -28,7 +28,4 @@
 	</div>
 	<p class="error" ng-if="setPasswordForm.$valid && vm.invalidCredentials">Passwords didn't match</p>
 	<input type="submit" class="button" value="Set Password">
-	<div style="margin-top: 25px; margin-bottom: 80px;">
-		Don't have an account? <a style="color: #7b868a;cursor: pointer;" ui-sref="access.signup">Click here.</a>
-	</div>
 </form>
