1. Centering profile and kyc forms 2. Refreshing profile and kyc forms

--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -142,6 +142,11 @@ table {
 
   }
 }
+
+md-step-body kyc-form form, md-step-body profile-form form {
+  justify-content: center;
+}
+
 kyc-form form, profile-form form{
    display: flex;
    flex-flow: row wrap;
